--- a/src/explore/components/Header.css
+++ b/src/explore/components/Header.css
@@ -5,9 +5,11 @@
 }
 
 .e_Header__cutter {
+  @media (min-width: 1100px) {
+    margin: 0 calc(var(--outer-space) * -1);
+  }
   overflow: hidden;
   padding: 0 0 30px;
-  margin: 0 calc(var(--outer-space) * -1);
 }
 
 .e_Header__inner {
@@ -19,13 +21,21 @@
   }
 
   @media (min-width: 1000px) {
+    padding: 0 var(--outer-space);
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
   }
 
-  padding: 0 var(--outer-space);
+  @media (min-width: 1000px) and (max-width: 1099px) {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
   min-height: 135px;
   box-shadow: 0 0 20px 10px #eb5b5920;
   border-bottom: 1px solid #eeebe2;
@@ -35,16 +45,36 @@
 
 .e_Header__inner::before,
 .e_Header__inner::after {
-  content: "";
-  display: block;
   position: absolute;
   top: 0;
   width: 48px;
   height: calc(100% + 30px);
 }
 
+@media (min-width: 1000px) {
+  .e_Header__inner::before,
+  .e_Header__inner::after {
+    content: "";
+    display: block;
+  }
+}
+
+@media (max-width: 1099px) {
+  .e_Header__inner::before,
+  .e_Header__inner::after {
+    width: var(--outer-space);
+  }
+}
+
+@media (min-width: 1100px) {
+  .e_Header__inner::before,
+  .e_Header__inner::after {
+    width: calc(var(--outer-space) * 2);
+  }
+}
+
 .e_Header__inner::before {
-  left: calc(var(--outer-space) * -1);
+  left: 0;
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1),
@@ -52,13 +82,25 @@
   );
 }
 
+@media (min-width: 1100px) {
+  .e_Header__inner::before {
+    left: calc(var(--outer-space) * -1);
+  }
+}
+
 .e_Header__inner::after {
-  right: calc(var(--outer-space) * -1);
+  right: 0;
   background: linear-gradient(
     -90deg,
     rgba(255, 255, 255, 1),
     rgba(255, 255, 255, 0)
   );
+}
+
+@media (min-width: 1100px) {
+  .e_Header__inner::after {
+    right: calc(var(--outer-space) * -1);
+  }
 }
 
 .e_Header__logo {
