--- a/src/explore/styles.css
+++ b/src/explore/styles.css
@@ -31,7 +31,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 p {
